// Copyright 2018, any4j Authors
// All rights reserved.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "java.org.zero.proto";
option java_outer_classname = "Any4JProto";
option objc_class_prefix = "A4J";

package any4j;

// Interface exported by the server.
service Any4J {
    rpc GetField(FieldCommand) returns (Response) {}
    rpc SetField(FieldCommand) returns (Response) {}
    rpc GetServerEntryPoint(FieldCommand) returns (Response) {}
}

message CallCommand {
    string target_object_id = 1;
    string method_name = 2;
    repeated CommonObject arguments = 3;
}

message ConstructorCommand {
    string fqn = 1;
    repeated CommonObject arguments = 2;

}

message FieldCommand {
    string sub_command = 1;
    string target_object_id = 2;
    string filed_name = 3;
    string value = 4;
}

message ReflectionCommand {
    string sub_command = 1;
    string fqn = 2;
    string jvm_id = 3;
    string member = 4;
}

message ArrayCommand {
    string sub_command = 1;
    int32 index = 2;
    string object_id_to_set = 3;

}

message CommonObject {
    string name = 1;
    string type = 2;
    string primitive_object = 3;
    bool is_reference = 4;
    bool is_null = 5;
    bool is_error = 6;
    bool is_void = 7;
    bool is_decimal = 8;
    bool is_array = 9;
    bool is_list = 10;
    bool is_map = 11;
    bool is_set = 12;
    bool is_iterator = 13;
    int32 size = 14;
    string command_part = 15; // py4j command protocol
}

message Response {
    string status_code = 1;
    CommonObject return_object = 2;
    string py4j_response = 3;
}
